crates/toml/tests/snapshots/invalid/float/exp-double-us.stderr
TOML parse error at line 1, column 19
  |
1 | exp-double-us = 1e__23
  |                   ^
`_` may only go between digits

---
TOML parse error at line 1, column 20
  |
1 | exp-double-us = 1e__23
  |                    ^
`_` may only go between digits
